--- a/templates/service.html
+++ b/templates/service.html
@@ -34,7 +34,7 @@
     
 
     <!-- Navbar Start -->
-    <nav class="navbar navbar-expand-lg bg-white navbar-light shadow-sm px-5 py-3 py-lg-0">
+    <nav class="navbar navbar-expand-lg bg-white navbar-light shadow-sm px-7 py-3 py-lg-0">
         <a href="{% url 'service' %}" class="navbar-brand p-0">
             <h4 class="m-0 text-danger"><img height="40px" width="70px" src="{% static 'img/logo.png' %}">Medlab Blood Bank</h4>
 
@@ -66,9 +66,9 @@
                 </div>
 
                 {% else %}
-                    <a href="{% url 'index' %}" class="nav-item nav-link active">Home</a>
+                    <a href="{% url 'index' %}" class="nav-item nav-link">Home</a>
                    
-                    <a href="{% url 'service' %}" class="nav-item nav-link">Service</a>
+                    <a href="{% url 'service' %}" class="nav-item nav-link active">Service</a>
                     <a href="{% url 'testimonial' %}" class="nav-item nav-link">Testimonial</a>
                     <a href="{% url 'about' %}" class="nav-item nav-link">About</a>
                     <a href="{% url 'contact' %}" class="nav-item nav-link">Contact</a>
@@ -122,7 +122,7 @@
                 <div class="col-lg-7">
                     <div class="section-title mb-5">
                         <h5 class="position-relative d-inline-block text-primary text-uppercase">Our Services</h5>
-                        <h1 class="display-5 mb-0">We Offer The Best Quality Dental Services</h1>
+                        <h1 class="display-5 mb-0">We Offer The Best Quality Health Services</h1>
                     </div>
                     <div class="row g-5">
                         <div class="col-md-6 service-item wow zoomIn" data-wow-delay="0.6s">
@@ -153,7 +153,7 @@
             <div class="row g-5 wow fadeInUp" data-wow-delay="0.1s">
                 <div class="col-lg-7">
                     <div class="row g-5">
-                        <div class="col-md-6 service-item wow zoomIn" data-wow-delay="0.3s">
+                        {% comment %} <div class="col-md-6 service-item wow zoomIn" data-wow-delay="0.3s">
                             <div class="rounded-top overflow-hidden">
                                 <img class="img-fluid" src="{% static 'img/service-3.jpg' %}" alt="">
                             </div>
@@ -168,16 +168,16 @@
                             <div class="position-relative bg-light rounded-bottom text-center p-4">
                                 <h5 class="m-0">Teeth Whitening</h5>
                             </div>
-                        </div>
+                        </div> {% endcomment %}
                     </div>
                 </div>
-                <div class="col-lg-5 service-item wow zoomIn" data-wow-delay="0.9s">
+                {% comment %} <div class="col-lg-5 service-item wow zoomIn" data-wow-delay="0.9s">
                     <div class="position-relative bg-primary rounded h-100 d-flex flex-column align-items-center justify-content-center text-center p-4">
                         <h3 class="text-white mb-3">Make Appointment</h3>
                         <p class="text-white mb-3">Clita ipsum magna kasd rebum at ipsum amet dolor justo dolor est magna stet eirmod</p>
                         <h2 class="text-white mb-0">+012 345 6789</h2>
                     </div>
-                </div>
+                </div> {% endcomment %}
             </div>
         </div>
     </div>
