--- a/templates/testimonial.html
+++ b/templates/testimonial.html
@@ -63,7 +63,16 @@
                 
                 <a href="{% url 'service' %}" class="nav-item nav-link">Service</a>
                 <a href="{% url 'testimonial' %}" class="nav-item nav-link active">Testimonial</a>
-                <a href="{% url 'about' %}" class="nav-item nav-link">About</a>
+                <div class="dropdown">
+                    <a href="#" class="nav-item nav-link dropdown-toggle" id="aboutDropdown" data-toggle="dropdown">
+                        About
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="aboutDropdown">
+                        <a class="dropdown-item" href="{% url 'about' %}">About Us</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="{% url 'whydonateblood' %}">Why Donate Blood?</a>
+                    </div>
+                </div>
                 <a href="{% url 'contact' %}" class="nav-item nav-link">Contact</a>
                 {% comment %} <a class="nav-item nav-link" href="{% url 'loggout' %}">Logout</a> {% endcomment %}
                 <div class="dropdown">
@@ -83,7 +92,16 @@
                    
                     <a href="{% url 'service' %}" class="nav-item nav-link">Service</a>
                     <a href="{% url 'testimonial' %}" class="nav-item nav-link active">Testimonial</a>
-                    <a href="{% url 'about' %}" class="nav-item nav-link">About</a>
+                    <div class="dropdown">
+                        <a href="#" class="nav-item nav-link dropdown-toggle" id="aboutDropdown" data-toggle="dropdown">
+                            About
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="aboutDropdown">
+                            <a class="dropdown-item" href="{% url 'about' %}">About Us</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="{% url 'whydonateblood' %}">Why Donate Blood?</a>
+                        </div>
+                    </div>
                     <a href="{% url 'contact' %}" class="nav-item nav-link">Contact</a>
                     <a class="nav-item nav-link" href="{% url 'loginn' %}">Login</a>
                 {% endif %}
