--- a/templates/mainuser/index.html
+++ b/templates/mainuser/index.html
@@ -250,9 +250,9 @@
         <div class="page-wrapper">
 			<div class="content">
 				<div class="row">
-					<div class="col-md-6 col-sm-6 col-lg-6 col-xl-3">
-						<div class="black-widget">
-							<div class="dash-widget" style="color:black">
+					<div class="col-md-6 col-sm-6 col-lg-6 col-xl-3" style="color:#9c3d46">
+						<div class="black-widget" style="color:#9c3d46">
+							<div class="dash-widget" style="color:#9c3d46">
 								<span class="dash-widget-bg2"><i class="fa fa-user-o"></i></span>
 								<div class="dash-widget-info text-right">
 									<h3>{{ donor_count }}</h3>
