--- a/templates/mainuser/labmainpage.html
+++ b/templates/mainuser/labmainpage.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" type="text/css" href="{% static 'mainuser/css/bootstrap.min.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'mainuser/css/font-awesome.min.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'mainuser/css/style.css' %}">
+    
     <style>
         body {
             background-image: url("{% static 'img/9.jpg' %}"); /* Replace 'background.jpg' with your image file name */
@@ -208,11 +209,13 @@
         </div>
         <div class="page-wrapper">
             <div class="content">
+                
+                
                 <div class="row clickable-row" data-form-id="laboratoryTestPackageForm">
                     <div class="col-lg-12">
                         <div class="card">
                             <div class="card-body">
-                                <h5 class="card-title">Specialized Health Packages</h5>
+                                <h5 class="card-title">ADD TEST DETAILS</h5>
                             </div>
                         </div>
                     </div>
@@ -250,7 +253,9 @@
                                         </div>
                                     </div>
                                     <div class="col-lg-12 mt-3">
-                                        <button type="submit" class="btn btn-primary" onclick="submitForm('laboratoryTestPackageForm')">Submit</button>
+                                        {% comment %} <button type="submit" class="btn btn-primary" onclick="submitForm('laboratoryTestPackageForm')">Submit</button> {% endcomment %}
+                                        <button type="button" class="btn btn-primary" onclick="submitForm('laboratoryTestPackageForm')">Submit</button>
+
 
                                     </div>
                                 </div>
@@ -259,8 +264,58 @@
                     </div>
                 </div>
                 </form>
-    
-                <div class="row clickable-row" data-form-id="specialPackageForm">
+                <div class="row mt-3">
+                    <div class="col-lg-12">
+                        <button type="button" class="btn btn-primary" onclick="showTests()">Show Tests</button>
+                    </div>
+                </div>
+                {% comment %} <div class="row mt-3" id="testTableContainer" style="display: none;">
+                    <div class="col-lg-12">
+                        <table class="table">
+                            <thead>
+                                <tr>
+                                    <th>Test Name</th>
+                                    <th>Test Price</th>
+                                    <th>Package Details</th>
+                                </tr>
+                            </thead>
+                            <tbody id="testTableBody">
+                                <!-- Test data will be populated here -->
+                            </tbody>
+                        </table>
+                    </div>
+                </div> {% endcomment %}
+                <div class="table-responsive">
+                    <table class="table table-bordered table-striped custom-table datatable mb-0">
+                        <thead>
+                            <tr>
+                                <th>Test Name</th>
+                                <th>Test Price</th>
+                                <th>Package Details</th>
+                                {% comment %} <th class="text-right">Action</th> {% endcomment %}
+                            </tr>
+                        </thead>
+                        <tbody id="testTableBody">
+                            <!-- Test data will be populated here dynamically -->
+                            {% for test in laboratory_tests %}
+                            <tr>
+                                <td>{{ test.test_name }}</td>
+                                <td>{{ test.test_price }}</td>
+                                <td>{{ test.package_details }}</td>
+                                {% comment %} <td class="text-right">
+                                    <div class="dropdown dropdown-action">
+                                        <a href="#" class="action-icon dropdown-toggle" data-toggle="dropdown" aria-expanded="false"><i class="fa fa-ellipsis-v"></i></a>
+                                        <div class="dropdown-menu dropdown-menu-right">
+                                            <a href="#" class="dropdown-item delete-test" data-test-id="{{ test.id }}"><i class="fa fa-trash-o m-r-5"></i>Delete</a>
+                                        </div>
+                                    </div>
+                                </td> {% endcomment %}
+                            </tr>
+                            {% endfor %}
+                        </tbody>
+                    </table>
+                </div>
+                {% comment %} <div class="row clickable-row" data-form-id="specialPackageForm">
                     <div class="col-lg-12">
                         <div class="card">
                             <div class="card-body">
@@ -293,10 +348,10 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div> {% endcomment %}
             
     
-                <div class="row clickable-row" data-form-id="testDetailsForm">
+                {% comment %} <div class="row clickable-row" data-form-id="testDetailsForm">
                     <div class="col-lg-12">
                         <div class="card">
                             <div class="card-body">
@@ -305,8 +360,27 @@
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="row form-container" id="testDetailsForms" style="display:none;">
+                </div> {% endcomment %}
+                {% comment %} <div class="row clickable-row" data-form-id="testDetailsForm" onclick="toggleForm('testDetailsFormContainer')">
+                    <div class="col-lg-12">
+                        <div class="card">
+                            <div class="card-body">
+                                <h5 class="card-title">Add Test Details</h5>
+                            </div>
+                        </div>
+                    </div>
+                </div> {% endcomment %}
+                {% comment %} <div class="row clickable-row" data-form-id="testDetailsForm" onclick="toggleTestDetailsForm()">
+                    <div class="col-lg-12">
+                        <div class="card">
+                            <div class="card-body">
+                                <h5 class="card-title">Add Test Details</h5>
+                            </div>
+                        </div>
+                    </div>
+                </div> {% endcomment %}
+                {% comment %} <div class="row form-container" id="testDetailsForms" style="display:none;"> {% endcomment %}
+                {% comment %} <div class="row form-container" id="testDetailsFormContainer" style="display:none;"
                     <div class="col-lg-12">
                         <div class="card">
                             <div class="card-body">
@@ -329,9 +403,52 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div> {% endcomment %}
                 
-    
+                {% comment %} <form id="testDetailsForm" action="{% url 'save_laboratory_test' %}" method="post" style="display: none;">
+                    {% csrf_token %}
+                    <div class="row form-container" id="testDetailsFormContainer">
+                        <div class="col-lg-12">
+                            <div class="card">
+                                <div class="card-body">
+                                    <!-- Form for adding test details goes here -->
+                                    <h5>Form for Add Test Details</h5>
+                                    <div class="row">
+                                        <div class="col-lg-6">
+                                            <div class="form-group">
+                                                <label for="testName">Test Name:</label>
+                                                <input type="text" class="form-control" id="testName" name="testName" placeholder="Enter test name">
+                                            </div>
+                                        </div>
+                                        <div class="col-lg-6">
+                                            <div class="form-group">
+                                                <label for="testPrice">Test Price:</label>
+                                                <input type="text" class="form-control" id="testPrice" name="testPrice" placeholder="Enter test price">
+                                            </div>
+                                        </div>
+                                        <div class="col-lg-6">
+                                            <div class="form-group">
+                                                <label for="packageDetails">Package Details:</label>
+                                                <ul id="testPackageDetailsList" class="list-unstyled">
+                                                    <li>
+                                                        <input type="text" class="form-control" name="packageDetails" placeholder="Enter package detail">
+                                                    </li>
+                                                    <!-- You can add more items dynamically using JavaScript -->
+                                                </ul>
+                                                <button type="button" class="btn btn-secondary" onclick="addTestDetailParameter()">Add More Parameters</button>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-12 mt-3">
+                                        <button type="button" class="btn btn-primary" onclick="submitForm('testDetailsForm')">Submit</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </form>
+                
+                 {% endcomment %}
     
                 <!-- Form for adding test details -->
                 <div class="form-fields" id="labTestForm">
@@ -394,15 +511,37 @@
         }
     </script>
     <script>
+        
+        function addTestDetailParameter() {
+            var packageDetailsList = document.getElementById('testPackageDetailsList');
+            var newItem = document.createElement('li');
+            newItem.innerHTML = '<input type="text" class="form-control" name="packageDetails" placeholder="Enter package detail">';
+            packageDetailsList.appendChild(newItem);
+        }
+    </script>
+    <script>
+        
         function toggleForm(formId) {
             var form = document.getElementById(formId);
-            if (form.style.display === "none") {
+            if (form.style.display === "none" || form.style.display === "") {
                 form.style.display = "block";
             } else {
                 form.style.display = "none";
             }
         }
     </script>
+    <script>
+        function toggleTestDetailsForm() {
+            var form = document.getElementById('testDetailsForm');
+            if (form.style.display === "none" || form.style.display === "") {
+                form.style.display = "block";
+            } else {
+                form.style.display = "none";
+            }
+        }
+    </script>
+    
+    
     <script>
         document.addEventListener('DOMContentLoaded', function () {
             // Dynamically include Chart.js script
@@ -432,6 +571,7 @@
                 });
             };
     
+                // Function to close all forms
             // Function to close all forms
             function closeAllForms() {
                 var forms = document.querySelectorAll('.form-container');
@@ -439,31 +579,46 @@
                     form.style.display = 'none';
                 });
             }
+
+            // Add event listener for "Add Test Details" row
+            var addTestDetailsRow = document.querySelector('.clickable-row[data-form-id="testDetailsForm"]');
+            addTestDetailsRow.addEventListener('click', function () {
+                // Close all forms before opening the clicked one
+                closeAllForms();
+
+                // Get the associated form ID from the data-form-id attribute
+                var formId = addTestDetailsRow.getAttribute('data-form-id');
+                var form = document.getElementById(formId + 'Container');
+
+                // Open the form
+                if (form) {
+                    form.style.display = 'block';
+                }
+            });
         });
-    
     
         function submitForm(formId) {
             var form = document.getElementById(formId);
-        
+    
             if (!form || form.tagName !== 'FORM') {
                 console.error('Invalid form element.');
                 return;
             }
-        
+    
             var formData = new FormData(form);
             formData.append('labTestName', document.getElementById('labTestName').value);
             formData.append('labTestPrice', document.getElementById('labTestPrice').value);
-        
+    
             // Convert packageDetails input values to an array
             var packageDetails = [];
             var packageDetailInputs = form.querySelectorAll('ul#packageDetailsList input');
             packageDetailInputs.forEach(function (input) {
                 packageDetails.push(input.value);
             });
-        
+    
             // Ensure packageDetails is always sent as a JSON array
             formData.append('packageDetails', JSON.stringify(packageDetails));
-        
+    
             fetch('/save_laboratory_test/', {
                 method: 'POST',
                 body: formData,
@@ -482,8 +637,7 @@
                 console.log('Response:', data);
                 if (data.status === 'success') {
                     alert('Data saved successfully');
-                    resetForm(formId);
-                    // You can perform additional actions after successful submission
+                    window.location.reload(); // Reload the page after successful submission
                 } else {
                     alert('Error saving data: ' + data.message);
                     // You can handle errors or display appropriate messages
@@ -494,9 +648,7 @@
                 alert('Error saving data: ' + error.message);
             });
         }
-        
-        
-
+    
         // Function to get CSRF token from cookies
         function getCookie(name) {
             var cookieValue = null;
@@ -510,17 +662,70 @@
                     }
                 }
             }
-                return cookieValue;
-            }
-            function resetForm(formId) {
-                var form = document.getElementById(formId);
-                if (form && form.tagName === 'FORM') {
-                    form.reset();
-                }
-            }
-            
-    </script>
+            return cookieValue;
+        }
     
+        function resetForm(formId) {
+            var form = document.getElementById(formId);
+            if (form && form.tagName === 'FORM') {
+                form.reset();
+            }
+        }
+    </script>
+    <script>
+        function showTests() {
+            $.ajax({
+                url: '{% url "fetch_laboratory_tests" %}', // Replace 'fetch_laboratory_tests' with your URL endpoint
+                type: 'GET',
+                success: function(response) {
+                    // Clear existing table rows
+                    $('#testTableBody').empty();
+    
+                    // Populate table with fetched test data
+                    response.forEach(function(test) {
+                        var row = '<tr>' +
+                            '<td>' + test.test_name + '</td>' +
+                            '<td>' + test.test_price + '</td>' +
+                            '<td>' + JSON.stringify(test.package_details) + '</td>' +
+                            '</tr>';
+                        $('#testTableBody').append(row);
+                    });
+    
+                    // Show the table
+                    $('#testTableContainer').show();
+                },
+                error: function(xhr, status, error) {
+                    console.error(xhr.responseText);
+                }
+            });
+        }
+    </script>
+    <script>
+        $(document).ready(function() {
+            $('.delete-test').click(function(e) {
+                e.preventDefault();
+                var testId = $(this).data('test-id');
+                var confirmation = confirm("Are you sure you want to delete this test?");
+                if (confirmation) {
+                    $.ajax({
+                        url: '/delete-test/' + testId + '/', // Replace with your delete test URL
+                        type: 'POST',
+                        data: {
+                            csrfmiddlewaretoken: '{{ csrf_token }}'
+                        },
+                        success: function(response) {
+                            // Remove the test row from the table
+                            $('#testRow_' + testId).remove();
+                        },
+                        error: function(xhr, status, error) {
+                            console.error(xhr.responseText);
+                            // Handle errors if any
+                        }
+                    });
+                }
+            });
+        });
+    </script>
     
 </body>
 
