--- a/templates/baselab.html
+++ b/templates/baselab.html
@@ -163,9 +163,9 @@
             <div class="navbar-nav ms-auto py-0">
                 
                 <a href="{% url 'homelab' %}" class="nav-item nav-link active">Home</a>
-                <a href="#" class="nav-item nav-link">Patients</a>
+                {% comment %} <a href="#" class="nav-item nav-link">Patients</a> {% endcomment %}
                 {% comment %} <a href="#" class="nav-item nav-link">Doctors</a> {% endcomment %}
-                <a href="#" class="nav-item nav-link">Book Covid-19 test</a>
+                {% comment %} <a href="#" class="nav-item nav-link">Book Covid-19 test</a> {% endcomment %}
 
 
                
