--- a/templates/mainuser/listgps.html
+++ b/templates/mainuser/listgps.html
@@ -138,9 +138,9 @@
                         <li>
                             <a href="{% url 'adminindex' %}"><i class="fa fa-dashboard"></i> <span>Dashboard</span></a>
                         </li>
-						<li>
+						{% comment %} <li>
                             <a href="{% url 'donors' %}"><i class="fa fa-users"></i> <span>Donors</span></a>
-                        </li>
+                        </li> {% endcomment %}
                         <li>
                             <a href="{% url 'registereddonortable' %}"><i class="fa fa-registered"></i> <span>Registered Donors</span></a>
                         </li>
