--- a/templates/staff/filldonordetails.html
+++ b/templates/staff/filldonordetails.html
@@ -217,6 +217,7 @@
                 <div class="row">
                     <div class="col-lg-8 offset-lg-2">
                         <form method="post" action="{% url 'donateddetails' appointment.id  %}">
+
                             {% csrf_token %}
                             
                             <div class="col-sm-6">
@@ -230,11 +231,22 @@
                             <div class="col-sm-6">
                                 <div class="form-group">
                                     <label>Date of Donation: <span class="text-danger">*</span></label>
-                                    <input class="form-control" type="date" name="date_of_donation" id="date_of_donation" required>
+                                    <input class="form-control" type="date" name="date_of_donation" id="date_of_donation" value="{{ camp_date }}" required>
+
                                     <p id="dateOfDonationError" style="color: red;"></p>
                                 </div>
                             </div>
-                    
+                            
+                            <div class="col-sm-6">
+                                <div class="form-group">
+                                    <label>Expiry Date: <span class="text-danger">*</span></label>
+                                    <input class="form-control" type="date" name="expiry_date" id="expiry_date" value="{{ expiry_date }}" required>
+
+                                    <p id="expiryDateError" style="color: red;"></p>
+                                </div>
+                            </div>
+                            
+                            {% comment %} <input type="hidden" id="camp_date" value="{{ camp_date }}">
                             <div class="col-sm-6">
                                 <div class="form-group">
                                     <label>Expiry Date: <span class="text-danger">*</span></label>
@@ -242,6 +254,9 @@
                                     <p id="expiryDateError" style="color: red;"></p>
                                 </div>
                             </div>
+                             {% endcomment %}
+                            
+                            
                     
                             <div class="col-sm-6">
                                 <div class="form-group">
@@ -289,8 +304,25 @@
     <script src="{% static 'staff/js/dataTables.bootstrap4.min.js' %}"></script>
     <script src="{% static 'staff/js/jquery.slimscroll.js' %}"></script>
     <script src="{% static 'staff/js/app.js' %}"></script>
+    {% comment %} <script>
+        document.addEventListener("DOMContentLoaded", function() {
+            // Get the camp date and expiry date elements
+            var campDateElement = document.getElementById('camp_date');
+            var expiryDateElement = document.getElementById('expiry_date');
+        
+            // Calculate the expiry date as 56 days from the camp date
+            var campDate = new Date(campDateElement.value);
+            var expiryDate = new Date(campDate.getTime() + (56 * 24 * 60 * 60 * 1000));
+        
+            // Format the expiry date as YYYY-MM-DD
+            var formattedExpiryDate = expiryDate.toISOString().split('T')[0];
+        
+            // Set the initial value of the expiry date field
+            expiryDateElement.value = formattedExpiryDate;
+        });
+        </script> {% endcomment %}
 </body>
 
 
-<!-- departments23:21-->
+
 </html>
